8203681: Miscellaneous changes imported from jsr166 CVS 2018-06
Reviewed-by: martin, psandoz